--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">EECS4443-Lab03</string>
+    <string name="contact_picture">Contact Picture</string>
+    <string name="contact_name">NAME</string>
+    <string name="contact_birthday">BIRTHDAY</string>
+    <string name="contact_phone_number">PHONE NUMBER</string>
+    <string name="contact_description">DESCRIPTION</string>
+    <string name="contact_notes">NOTES</string>
+    <string name="contact_date_of_addition">DATE OF ADDITION</string>
+    <string name="contact_edit_button_text">Edit Contact</string>
 </resources>
