--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,6 @@
     <string name="contact_phone_number">PHONE NUMBER</string>
     <string name="contact_description">DESCRIPTION</string>
     <string name="contact_notes">NOTES</string>
-    <string name="contact_date_of_addition">DATE OF ADDITION</string>
+    <string name="contact_date_added">DATE ADDED</string>
     <string name="contact_edit_button_text">Edit Contact</string>
 </resources>
