--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="contact_edit_button_text">Edit Contact</string>
     <string name="add_new_contact">Add New Contact</string>
     <string name="add_contact">Add Contact</string>
+    <string name="delete_contact">Delete Contact</string>
     <string name="data_storage_method">Data Storage Method:</string>
     <string name="shared_preferences">SharedPreferences</string>
     <string name="sqlite">SQLite</string>
