Added UI required fields for name and phone number for add and edit activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="contact_name">NAME</string>
     <string name="contact_birthday">BIRTHDAY</string>
     <string name="contact_phone_number">PHONE NUMBER</string>
+    <string name="required_name">NAME (*)</string>
+    <string name="required_phone_number">PHONE NUMBER (*)</string>
     <string name="contact_description">DESCRIPTION</string>
     <string name="contact_notes">NOTES</string>
     <string name="contact_date_added">DATE ADDED</string>
